@@ -145,6 +145,8 @@ Release 2.7.0
     HDFS-7704. DN heartbeat to Active NN may be blocked and expire if
     connection to Standby NN continues to time out (Rushabh Shah via kihwal)
 
+    HDFS-7635. Remove TestCorruptFilesJsp from branch-2. (cnauroth)
+
 Release 2.6.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
